update img link
update img link

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -247,14 +247,14 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
     position: relative;
     height: 768px; 
 /*heigh可用100vh 但手機版圖片下方會被吃掉...*/       
-    background-image: url(/img/bg_home.svg);
+    background-image: url(img/bg_home.svg);
     background-repeat: no-repeat;
     background-position: top right;
     background-size: 850px 768px; 
     z-index: 1;  
 
         @include phone{            
-         background-image: url(/img/bg_home_sm.svg);
+         background-image: url(img/bg_home_sm.svg);
          background-size: 334px 245px;
          background-position: bottom right;
      }   
@@ -263,7 +263,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
 /*ball01定位在banner*/
 .ball01 {
     position: absolute;
-    background-image: url(/img/ball01.svg);
+    background-image: url(img/ball01.svg);
     top: calc(100vh - 180px);
     left: 0;
     width: 138px;
@@ -376,15 +376,15 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
             }
         }
         &-img-messenger{
-            background-image: url(/img/messenger.png);
+            background-image: url(img/messenger.png);
             background-size: cover;
         }
         &-img-line {
-            background-image: url(/img/line.png);
+            background-image: url(img/line.png);
             background-size: cover;
         }
         &-img-ig {
-            background-image: url(/img/instagram.png);
+            background-image: url(img/instagram.png);
             background-size: cover;
          }
                     
@@ -397,7 +397,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
 /*ball02定位在card裡ball02-relative*/
     .ball02 {
         position: absolute;
-        background-image: url(/img/ball02.svg);
+        background-image: url(img/ball02.svg);
         bottom: -155px;
         right: 0;
         width: 210px;
@@ -508,7 +508,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
 /*ball03定位在card裡ball03-relative*/
     .ball03 {
         position: absolute;
-        background-image: url(/img/ball03.svg);
+        background-image: url(img/ball03.svg);
         top: 48px;
         left: 30px;
         width: 150px;
@@ -594,14 +594,14 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
 
 /*footerplan*/
 .footer-plan{
-    background-image: url("/img/bg.png");
+    background-image: url("img/bg.png");
     background-repeat: no-repeat;    
     background-position: center;
     background-size: cover;
     padding-top: 260px;
     padding-bottom: 100px;
     @include phone{
-     background-image: url("/img/bg@2x.png");padding-top: 293px;
+     background-image: url("img/bg@2x.png");padding-top: 293px;
         padding-bottom: 60px;
    }
     .footer-text{
@@ -647,7 +647,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
     }
 }
 .project-banner{    
-        background-image: url(/img/banner.svg);
+        background-image: url(img/banner.svg);
         background-repeat: no-repeat;
         height: 545px;    
         background-position: right top;
@@ -655,7 +655,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
         background-size: 885px 545px;
 
         @include phone{
-            background-image: url(/img/banner_sm.svg);
+            background-image: url(img/banner_sm.svg);
             background-size: 375px 495px;
          }
 }
@@ -674,7 +674,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
     position: relative;
     .ball04 {
         position: absolute;
-        background-image: url(/img/ball03.svg);
+        background-image: url(img/ball03.svg);
         top: 40%;
         left: 0;
         width: 94px;
