--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -247,7 +247,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
     position: relative;
     height: 768px; 
 /*heigh可用100vh 但手機版圖片下方會被吃掉...*/       
-    background-image: url(img/bg_home.svg);
+    background-image: url("img/bg_home.svg");
     background-repeat: no-repeat;
     background-position: top right;
     background-size: 850px 768px; 
