--- a/scss/all.css
+++ b/scss/all.css
@@ -403,7 +403,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
   position: relative;
   height: 768px;
   /*heigh可用100vh 但手機版圖片下方會被吃掉...*/
-  background-image: url("/img/bg_home.svg");
+  background-image: url(../img/bg_home.svg);
   background-repeat: no-repeat;
   background-position: top right;
   background-size: 850px 768px;
@@ -420,7 +420,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
 /*ball01定位在banner*/
 .ball01 {
   position: absolute;
-  background-image: url(/img/ball01.svg);
+  background-image: url("../img/ball01.svg");
   top: calc(100vh - 180px);
   left: 0;
   width: 138px;
