--- a/scss/all.css
+++ b/scss/all.css
@@ -888,7 +888,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
 }
 
 .project-banner {
-  background-image: url("..img/banner.svg");
+  background-image: url("../img/banner.svg");
   background-repeat: no-repeat;
   height: 545px;
   background-position: right top;
@@ -897,7 +897,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
 }
 @media (max-width: 576px) {
   .project-banner {
-    background-image: url("..img/banner_sm.svg");
+    background-image: url("../img/banner_sm.svg");
     background-size: 375px 495px;
   }
 }
@@ -912,7 +912,7 @@ fblineins聊天機器人解決方案+量身打造專屬服務*/
 }
 .ball04-relative .ball04 {
   position: absolute;
-  background-image: url("..img/ball03.svg");
+  background-image: url("../img/ball03.svg");
   top: 40%;
   left: 0;
   width: 94px;
